[gd_scene load_steps=3 format=3 uid="uid://dm8f0m8grqiiv"]

[ext_resource type="Script" path="res://UI/pause_menu.gd" id="1_4ocke"]
[ext_resource type="Theme" uid="uid://d2luyiqyrk76m" path="res://UI/new_theme.tres" id="3_e8w62"]

[node name="PauseMenu" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0745098, 0.0745098, 0.0745098, 0.498039)
script = ExtResource("1_4ocke")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_right = 240.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_e8w62")
theme_override_constants/separation = 75
alignment = 1

[node name="BackToGame" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
text = "Back to Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
text = "Settings"

[node name="Reset" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
text = "Reset Level"

[node name="Button4" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/BackToGame" to="." method="back_to_game"]
[connection signal="pressed" from="VBoxContainer/Reset" to="." method="reset_level"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="main_menu"]
